tools/tests/errors/surf_cont_03.experr
Bytes index out of range
